--- a/requirements.txt
+++ b/requirements.txt
@@ -21,24 +21,26 @@ jedi==0.18.1
 Markdown==3.3.6
 matplotlib-inline==0.1.3
 oauthlib==3.2.0
+pandas==1.4.2
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.0.1
 prompt-toolkit==3.0.28
+psycopg2-binary==2.9.3
 pure-eval==0.2.2
-pycparser==2.21
 Pygments==2.11.2
 PyJWT==2.3.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 six==1.16.0
 soupsieve==2.3.1
+SQLAlchemy==1.4.35
 sqlparse==0.4.2
 stack-data==0.2.0
 traitlets==5.1.1
 tzdata==2022.1
 urllib3==1.26.9
 wcwidth==0.2.5
-cryptography
