--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,50 @@
-asgiref==3.5.0
-asttokens==2.0.5
+asgiref==3.8.1
+asttokens==2.4.1
 backcall==0.2.0
-beautifulsoup4==4.10.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-colorama==0.4.4
-cryptography==36.0.2
+beautifulsoup4==4.12.3
+certifi==2020.6.20
+cffi==1.17.1
+chardet==3.0.4
+colorama==0.4.6
+cryptography==43.0.3
 decorator==5.1.1
-defusedxml==0.7.1
-Django==3.2
-django-allauth==0.50.0
-django-crispy-forms==1.14.0
-django-extensions==3.1.5
-django-markdownx==3.0.1
-executing==0.8.3
-gunicorn==20.1.0
-idna==3.3
-ipython==8.2.0
-jedi==0.18.1
-Markdown==3.3.6
-matplotlib-inline==0.1.3
-oauthlib==3.2.0
-pandas==1.4.2
-parso==0.8.3
+defusedxml==0.6.0
+Django==4.2.16
+django-allauth==65.1.0
+django-crispy-forms==2.3
+django-extensions==3.2.3
+django-markdownx==4.0.7
+exceptiongroup==1.2.2
+executing==2.1.0
+gunicorn==23.0.0
+idna==2.10
+importlib-metadata==8.5.0
+ipython==8.12.3
+ipython-genutils==0.2.0
+jedi==0.19.1
+jwt==1.3.1
+Markdown==3.7
+matplotlib-inline==0.1.7
+oauthlib==3.1.0
+packaging==24.1
+parso==0.8.4
 pickleshare==0.7.5
-Pillow==9.0.1
-prompt-toolkit==3.0.28
-psycopg2-binary==2.9.3
-pure-eval==0.2.2
-Pygments==2.11.2
-PyJWT==2.3.0
-python-dateutil==2.8.2
+pillow==10.4.0
+prompt-toolkit==3.0.48
+pure-eval==0.2.3
+pycparser==2.22
+Pygments==2.7.1
 python3-openid==3.2.0
-pytz==2022.1
-requests==2.27.1
-requests-oauthlib==1.3.1
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
 six==1.16.0
-soupsieve==2.3.1
-SQLAlchemy==1.4.35
-sqlparse==0.4.2
-stack-data==0.2.0
-traitlets==5.1.1
-tzdata==2022.1
-urllib3==1.26.9
+soupsieve==2.0.1
+sqlparse==0.3.1
+stack-data==0.6.3
+traitlets==5.14.3
+typing-extensions==4.12.2
+tzdata==2024.2
+urllib3==1.25.10
 wcwidth==0.2.5
+zipp==3.20.2
