--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ parso==0.8.4
 pickleshare==0.7.5
 pillow==10.4.0
 prompt-toolkit==3.0.48
+psycopg2-binary==2.9.10
 pure-eval==0.2.3
 pycparser==2.22
 Pygments==2.7.1
